// Copyright (c) 2018-2020 MobileCoin Inc.

// General-purpose administrative data types and service descriptors.
// There are APIs related to some general-purpose management of a MobileCoin service instance,
// and getting some common information out of it.
// Some of them are sensitive, and as such these are not intended to be exposed to the world.

syntax = "proto3";
import "google/protobuf/empty.proto";
import "build_info.proto";

package admin;

service AdminAPI {
    // Get Prometheus metrics.
    rpc GetPrometheusMetrics (google.protobuf.Empty) returns (GetPrometheusMetricsResponse);

    // Get information such as build info, logging configuration, etc.
    rpc GetInfo (google.protobuf.Empty) returns (GetInfoResponse);

    // Set RUST_LOG.
    rpc SetRustLog (SetRustLogRequest) returns (google.protobuf.Empty);

    // Logs a test error message.
    rpc TestLogError (google.protobuf.Empty) returns (google.protobuf.Empty);
}

message GetPrometheusMetricsResponse {
    // Prometheus-encoded metrics.
    // https://github.com/prometheus/docs/blob/master/content/docs/instrumenting/exposition_formats.md
    string metrics = 1;
}

message GetInfoResponse {
    // JSON-encoded build information.
    string build_info_json = 1;

    // Structured build information.
    build_info.BuildInfo build_info = 2;

    // Service-specific JSON-encoded configuration.
    string config_json = 3;

    // Current RUST_LOG value.
    string rust_log = 4;
}

message SetRustLogRequest {
    // New value to set RUST_LOG to.
    string rust_log = 1;
}
